Fix up event type logos, table spacing

--- a/static/style.css
+++ b/static/style.css
@@ -35,6 +35,7 @@ section {
 table, th, td {
     border: 3px ridge black;
     border-collapse: collapse;
+    padding: 5px;
 }
 
 #players table, #players th, #players td {
